--- a/assets/sass/dialog.scss
+++ b/assets/sass/dialog.scss
@@ -18,3 +18,19 @@
 	position: absolute;
 	
 }
+
+
+.prompt {
+	position: fixed;
+	left: 0;
+	bottom: 0;
+
+	width: 100%;
+	// height: 50px;
+	border-top: 1px solid #ccc;
+	padding: 30px;
+	font-size: 15px;
+  font-weight: bold;
+	background-color: #ffeebc;
+	z-index: 99;
+}
