--- a/assets/sass/_keyframes.scss
+++ b/assets/sass/_keyframes.scss
@@ -54,3 +54,12 @@
 		overflow: hidden;
 	}
 } */
+
+@include keyframes(rotate) {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
