--- a/assets/sass/dialog.scss
+++ b/assets/sass/dialog.scss
@@ -13,6 +13,7 @@
 	width: 100%;
 	height: 100%;
 	background-color: rgba(0,0,0,.4);
+	z-index: 999;
 }
 
 .panel {
@@ -30,8 +31,9 @@
 	border-top: 1px solid #ccc;
 	padding: 30px;
 	font-size: 15px;
-  font-weight: bold;
-	background-color: #ffeebc;
+  // font-weight: bold;
+  color: #63430a;
+	background-color: #fffbe5;
 	z-index: 99;
 }
 
