--- a/assets/sass/_panel.scss
+++ b/assets/sass/_panel.scss
@@ -4,14 +4,18 @@
 
 .panel {
 	min-width: 300px;
-	border: $border;
+	// border: $border;
+	border-radius: 6px;
 	background: $bg-panel;
+	overflow: hidden;
 	
 	// 标题
 	.panel-heading {
-		padding: 6px;
-		@extend .clearfix;
+		padding: 8px 6px;
+		color: #fff;
+		background-color: #337ab7;
 		cursor: move;
+		@extend .clearfix;
 		.close {
 			float: right;
 		}
