--- a/assets/sass/_utilities.scss
+++ b/assets/sass/_utilities.scss
@@ -4,9 +4,10 @@
 }
 
 .close {
+	font-weight: bold;
 	cursor: pointer;
 
 	&:hover {
-		color: lighten($color-dark, 10%);
+		color: lighten($color-dark, 20%);
 	}
 }
