--- a/assets/sass/_variables.scss
+++ b/assets/sass/_variables.scss
@@ -2,13 +2,16 @@
  * 定义共用变量
  */
 
-$bg-panel: #fff;
 $border: 1px solid #ccc;
+$border-transparent: 1px solid transparent;
 
-$color-danger: red;
-$color-success: green;
 
-$bg-danger: $color-danger;
-$bg-success: $color-success;
+$color-default: #fff;
+$color-primary: #337ab7;
+$color-danger: #c9302c;
+$color-success: #5cb85c;
+$color-warn: #ec971f;
+$color-info: #5bc0de;
+
 
 $color-dark: #000;
