--- a/assets/sass/dialog.scss
+++ b/assets/sass/dialog.scss
@@ -1,6 +1,7 @@
 @import "_variables";
 @import "_mixins";
 @import "_utilities";
+@import "_iconfont";
 @import "_button";
 @import "_panel";
 @import "_keyframes";
